# command-based-framework

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
requirements/: base.txt  debug.txt  release.txt
src/command_based_framework/: __main__.py  _common.py  actions.py  commands.py  exceptions.py  robot.py  scheduler.py  subsystems.py
tests/: test_actions.py  test_commands.py  test_scheduler.py  test_subsystems.py
